--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vue_temp",
   "private": true,
   "version": "0.0.0",
+  "main": "./index",
   "scripts": {
     "dev": "vite --port 8000",
     "build": "vite build",
@@ -15,12 +16,16 @@
     "vite-plugin-vue2": "^2.0.1",
     "vue": "2.6",
     "vue-router": "^3.5.4",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.18.0",
+    "eslint-plugin-vue": "^9.1.1",
     "postcss-pxtorem": "^6.0.0",
     "vite": "^2.9.9",
+    "vite-plugin-eslint": "^1.6.1",
     "vite-plugin-imp": "^2.2.0"
   }
 }
