--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.27.2",
+    "cropperjs": "^1.5.12",
+    "dayjs": "^1.11.3",
+    "json-bigint": "^1.0.0",
     "less": "^4.1.3",
+    "lodash": "^4.17.21",
     "vant": "^2.12.47",
     "vite-plugin-vue2": "^2.0.1",
     "vue": "2.6",
